--- a/domains/alert-managment/geo-service/Dockerfile
+++ b/domains/alert-managment/geo-service/Dockerfile
@@ -1,5 +1,13 @@
+# Build Stage
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
+WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Runtime Stage
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
-COPY target/geo-service-1.0.0.jar app.jar
+COPY --from=builder /app/target/geo-service-1.0.0.jar app.jar
 EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "app.jar"]
